--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -13,6 +13,18 @@ on:
         type: string
 
 jobs:
+  create-coverage-name:
+    name: "Create coverage artifact name"
+    runs-on: ubuntu-latest
+    outputs:
+      coverage-name: ${{ steps.create_coverage_name.outputs.coverage-name }}
+    steps:
+      - id: create_coverage_name
+        run: |
+          BRANCH_NAME="${{ github.head_ref || github.ref_name }}"
+          SANITIZED_BRANCH=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9_-]/-/g')
+          echo "coverage-name=coverage-${SANITIZED_BRANCH}-${{ github.run_number }}" >> $GITHUB_OUTPUT
+
   test-unit:
     name: "Unit tests"
     runs-on: ubuntu-latest
@@ -143,7 +155,7 @@ jobs:
 
   merge-test-coverage:
     name: "Merge test coverage"
-    needs: [test-unit, test-contract, test-schema]
+    needs: [create-coverage-name, test-unit, test-contract, test-schema]
     runs-on: ubuntu-latest
     timeout-minutes: 2
     steps:
@@ -176,17 +188,21 @@ jobs:
           path: gateway-api/schema/
       - name: "Merge coverage data"
         run: make test-coverage
+      - name: "Rename coverage XML with unique name"
+        run: |
+          cd gateway-api/test-artifacts/coverage
+          mv coverage-merged.xml ${{ needs.create-coverage-name.outputs.coverage-name }}.xml
       - name: "Upload combined coverage report"
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report
-          path: gateway-api/test-artifacts/coverage/html/
+          name: ${{ needs.create-coverage-name.outputs.coverage-name }}
+          path: gateway-api/test-artifacts/coverage/
           retention-days: 30
 
   perform-static-analysis:
     name: "Perform static analysis"
-    needs: [test-unit, test-contract, test-schema]
+    needs: [create-coverage-name, merge-test-coverage]
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -197,9 +213,15 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0 # Full history is needed to improving relevancy of reporting
+      - name: "Download merged coverage report"
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.create-coverage-name.outputs.coverage-name }}
+          path: gateway-api/test-artifacts/coverage/
       - name: "Perform static analysis"
         uses: ./.github/actions/perform-static-analysis
         with:
           sonar_organisation_key: "${{ vars.SONAR_ORGANISATION_KEY }}"
           sonar_project_key: "${{ vars.SONAR_PROJECT_KEY }}"
           sonar_token: "${{ secrets.SONAR_TOKEN }}"
+          coverage_xml_path: "gateway-api/test-artifacts/coverage/${{ needs.create-coverage-name.outputs.coverage-name }}.xml"
