--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -20,10 +20,14 @@ jobs:
       coverage-name: ${{ steps.create_coverage_name.outputs.coverage-name }}
     steps:
       - id: create_coverage_name
+        env:
+          HEAD_REF: ${{ github.head_ref }}
+          REF_NAME: ${{ github.ref_name }}
+          RUN_NUMBER: ${{ github.run_number }}
         run: |
-          BRANCH_NAME="${{ github.head_ref || github.ref_name }}"
+          BRANCH_NAME="${HEAD_REF:-$REF_NAME}"
           SANITIZED_BRANCH=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9_-]/-/g')
-          echo "coverage-name=coverage-${SANITIZED_BRANCH}-${{ github.run_number }}" >> $GITHUB_OUTPUT
+          echo "coverage-name=coverage-${SANITIZED_BRANCH}-${RUN_NUMBER}" >> $GITHUB_OUTPUT
 
   test-unit:
     name: "Unit tests"
