--- a/.github/actions/start-local-lambda/action.yaml
+++ b/.github/actions/start-local-lambda/action.yaml
@@ -13,11 +13,16 @@ inputs:
     description: "Maximum seconds to wait for readiness"
     required: false
     default: "60"
+python-version:
+    description: "Python version to install"
+    required: true
 runs:
   using: "composite"
   steps:
     - name: "Start local Lambda environment"
       shell: bash
+      env:
+        PYTHON_VERSION: ${{ inputs.python-version }}
       run: |
         set -euo pipefail
         echo "Starting local Lambda: '${{ inputs.deploy-command }}'"
