--- a/infrastructure/images/gateway-api/Dockerfile
+++ b/infrastructure/images/gateway-api/Dockerfile
@@ -1,5 +1,8 @@
-# Base image
-FROM public.ecr.aws/lambda/python:3.14
+# Retrieve the python version from build arguments, deliberately set to "invalid" by default to highlight when no version is provided when building the container.
+ARG PYTHON_VERSION=invalid
+# Use the specified python version to retrieve the required base lambda image.
+ARG url=public.ecr.aws/lambda/python:${PYTHON_VERSION}
+FROM $url
 
 COPY resources/ /resources
 
