[GPCAPIM-205]: Clean up test commits and add configutation for GPG and SSH in windows

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,10 @@
         "ms-python.vscode-python-envs",
         "ms-python.mypy-type-checker"
       ],
-      "extensions.ignoreRecommendations": true
+      "extensions.ignoreRecommendations": true,
+      "settings": {
+        "git.path": "/usr/bin/git"
+      }
     }
   },
   "features": {
