--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # Please, add your custom content below!
 **/__pycache__
 **/.ruff_cache
+**/.mypy_cache
 
 # Testing artifacts
-gateway-api/.hypothesis
-**/.mypy_cache
+**/.hypothesis
