--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,11 +12,10 @@
   "github.copilot.enable": {
     "*": true,
     "plaintext": false,
+    "markdown": false,
+    "scminput": false,
     "dotenv": false,
     "ini": false,
-    "json": false,
-    "jsonc": false,
-    "yaml": false,
     ".crt": false,
     ".key": false,
     ".pem": false
@@ -29,12 +28,18 @@
   // Enabling Ruff formatter for python files.
   "[python]": {
     "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "explicit",
+      "source.fixAll": "explicit"
+    },
     "editor.defaultFormatter": "charliermarsh.ruff"
   },
   "terminal.integrated.defaultProfile.linux": "bash",
+  // Cucumber extension configuration
   "cucumberautocomplete.steps": [
-        "gateway-api/features/steps/*.py",
+        "gateway-api/tests/acceptance/steps/*.py",
   ],
+  "cucumberautocomplete.gherkinDefinitionPart": "@(given|when|then|step)\\((?:parsers.*parse\\(|)",
   // Pylance configuration
   "python.analysis.typeEvaluation.deprecateTypingAliases": true,
   "python.analysis.showOnlyDirectDependenciesInAutoImport": true,
@@ -43,5 +48,13 @@
   // Mypy configuration
   "mypy-type-checker.cwd": "${nearestConfig}",
   // Enable re-format on type
-  "editor.formatOnType": true
+  "editor.formatOnType": true,
+  // Disabling telemetry and AI features from GitLens
+  "gitlens.telemetry.enabled": false,
+  "gitlens.ai.enabled": false,
+  "python.testing.pytestArgs": [
+    "tests"
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
