--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,9 @@
   ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "git.enableCommitSigning": true
+  "git.enableCommitSigning": true,
+  "sonarlint.connectedMode.project": {
+    "connectionId": "nhsdigital",
+    "projectKey": "NHSDigital_clinical-data-gateway-api"
+  }
 }
