[GPCAPIM-205]: Update Dev Container to use OpenJDK 21 JRE and remove for build container

--- a/infrastructure/images/build-container/Dockerfile
+++ b/infrastructure/images/build-container/Dockerfile
@@ -47,9 +47,7 @@ RUN apk add --no-cache --update bash \
     tk-dev \
     zstd-dev \
     # gnupg to support signing of commits
-    gnupg \
-    # Java Runtime Environment to support SonarQube VSCode extension
-    openjdk17-jre
+    gnupg
 
 
 # Install Python (via pyenv)
