--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
       "extensions.ignoreRecommendations": true,
       "settings": {
         "git.path": "/usr/bin/git",
-        "sonarlint.ls.javaHome": "/usr/lib/jvm/java-17-openjdk"
+        "sonarlint.ls.javaHome": "/usr/lib/jvm/java-21-openjdk"
       }
     }
   },
@@ -39,7 +39,7 @@
       "omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions.git https://github.com/zsh-users/zsh-syntax-highlighting.git"
     }
   },
-  "postCreateCommand": "scripts/devcontainer/configure-zsh.sh && bash -c 'source ~/.bashrc && make config && pyenv activate gateway && make dependencies'",
+  "postCreateCommand": "apk add --no-cache openjdk21-jre && scripts/devcontainer/configure-zsh.sh && bash -c 'source ~/.bashrc && make config && pyenv activate gateway && make dependencies'",
   "mounts": [
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind,consistency=cached"
   ],
