[GPCAPIM-205]: Fixed permissions for install-gitleaks and custom-check-terraform-format scripts
Also ensured zsh is the default terminal within the devcontainer.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,7 @@
     },
     "editor.defaultFormatter": "charliermarsh.ruff"
   },
-  "terminal.integrated.defaultProfile.linux": "bash",
+  "terminal.integrated.defaultProfile.linux": "zsh",
   // Cucumber extension configuration
   "cucumberautocomplete.steps": [
         "gateway-api/tests/acceptance/steps/*.py",
