--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,11 +18,11 @@
         "ms-python.debugpy",
         "ms-python.vscode-python-envs",
         "ms-python.mypy-type-checker",
-        "sonarsource.sonarlint-vscode"
+        "sonarsource.sonarlint-vscode",
+        "alexkrechik.cucumberautocomplete"
       ],
       "extensions.ignoreRecommendations": true,
       "settings": {
-        "git.path": "/usr/bin/git",
         "sonarlint.ls.javaHome": "/usr/lib/jvm/java-21-openjdk"
       }
     }
@@ -39,7 +39,7 @@
       "omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions.git https://github.com/zsh-users/zsh-syntax-highlighting.git"
     }
   },
-  "postCreateCommand": "apk add --no-cache openjdk21-jre && scripts/devcontainer/install-gitleaks.sh && scripts/devcontainer/configure-zsh.sh && bash -c 'source ~/.bashrc && make config && pyenv activate gateway && make dependencies'",
+  "postCreateCommand": "apk add --no-cache openjdk21-jre && scripts/devcontainer/configure-zsh.sh && bash -c 'source ~/.bashrc && make config && pyenv activate gateway && make dependencies'",
   "mounts": [
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind,consistency=cached"
   ],
