--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,14 +52,13 @@
   // Disabling telemetry and AI features from GitLens
   "gitlens.telemetry.enabled": false,
   "gitlens.ai.enabled": false,
-  "python.testing.pytestArgs": [
-    "tests"
-  ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "git.enableCommitSigning": true,
   "sonarlint.connectedMode.project": {
     "connectionId": "nhsdigital",
     "projectKey": "NHSDigital_clinical-data-gateway-api"
-  }
+  },
+  // Disabling automatic port forwarding as the devcontainer should already have access to any required ports.
+  "remote.autoForwardPorts": false
 }
