[GPCAPIM-204]: add test for lambda_handler

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,6 @@ sonar.host.url=https://sonarcloud.io
 sonar.qualitygate.wait=true
 sonar.sourceEncoding=UTF-8
 sonar.sources=gateway-api
-sonar.coverage.exclusions=**/tests/**,**/features/**
+sonar.coverage.exclusions=**/tests/**,**/features/**,**/test_*.py
 # Set Python version for more precise analysis
 sonar.python.version=3.14
