[GPCAPIM-204]: don't run sonar for dependabot

--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -203,6 +203,7 @@ jobs:
   sonarcloud-analysis:
     name: "SonarCloud Analysis"
     needs: [create-coverage-name, merge-test-coverage]
+    if: github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
