[GPCAPIM-205]: Update configuration files for development environment
- Add end-of-line character setting in VSCode configuration
- Update project workspace settings for consistency
- Add CoPilot instructions to commit template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,6 @@
     "projectKey": "NHSDigital_clinical-data-gateway-api"
   },
   // Disabling automatic port forwarding as the devcontainer should already have access to any required ports.
-  "remote.autoForwardPorts": false
+  "remote.autoForwardPorts": false,
+  "files.eol": "\r\n"
 }
