[GPCAPIM-205]: Remove redundant line in settings configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,5 @@
     "projectKey": "NHSDigital_clinical-data-gateway-api"
   },
   // Disabling automatic port forwarding as the devcontainer should already have access to any required ports.
-  "remote.autoForwardPorts": false,
+  "remote.autoForwardPorts": false
 }
