--- a/scripts/config/pre-commit.yaml
+++ b/scripts/config/pre-commit.yaml
@@ -3,27 +3,27 @@ repos:
   hooks:
   - id: scan-secrets
     name: Scan secrets
-    entry: ./scripts/githooks/scan-secrets.sh
-    args: ["check=staged-changes"]
-    language: script
+    entry: bash
+    args: ["-c", "check=staged-changes ./scripts/githooks/scan-secrets.sh"]
+    language: system
     pass_filenames: false
   - id: check-file-format
     name: Check file format
-    entry: ./scripts/githooks/check-file-format.sh
-    args: ["check=staged-changes"]
-    language: script
+    entry: bash
+    args: ["-c", "check=staged-changes ./scripts/githooks/check-file-format.sh"]
+    language: system
     pass_filenames: false
   - id: check-markdown-format
     name: Check Markdown format
-    entry: ./scripts/githooks/check-markdown-format.sh
-    args: ["check=staged-changes"]
-    language: script
+    entry: bash
+    args: ["-c", "check=staged-changes ./scripts/githooks/check-markdown-format.sh"]
+    language: system
     pass_filenames: false
   - id: check-english-usage
     name: Check English usage
-    entry: ./scripts/githooks/check-english-usage.sh
-    args: ["check=staged-changes"]
-    language: script
+    entry: bash
+    args: ["-c", "check=staged-changes ./scripts/githooks/check-english-usage.sh"]
+    language: system
     pass_filenames: false
   - id: lint-terraform
     name: Lint Terraform
