--- a/infrastructure/images/build-container/resources/.gitignore
+++ b/infrastructure/images/build-container/resources/.gitignore
@@ -1,2 +1,2 @@
-# tool-versions is copied into this directory via the top level make file so it can be included within the build-container.
+# tool-versions is copied into this directory so it can be included within the build-container.
 .tool-versions
