Added gateway local script. Added DS_Store to gitignore. Renamed HOSTNAME to HOST

--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -2,7 +2,7 @@ name: "Test stage"
 
 env:
   BASE_URL: "http://localhost:5000"
-  HOSTNAME: "localhost"
+  HOST: "localhost"
 
 on:
   workflow_call:
