--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "gateway-api-build-container",
-  "build":{
+  "build": {
     "dockerfile": "../infrastructure/images/build-container/Dockerfile",
     "args": {
       "INCLUDE_DEV_CERTS": "true"
@@ -39,7 +39,7 @@
     }
   },
   "postCreateCommand": "doas apk add --no-cache openjdk21-jre && scripts/devcontainer/configure-zsh.sh && bash -c 'source ~/.bashrc && make config && pyenv activate gateway && make dependencies'",
-  "initializeCommand": "cp .tool-versions ${localWorkspaceFolder}/infrastructure/images/build-container/resources/.tool-versions",
+  "initializeCommand": "scripts/devcontainer/create-docker-network-if-required.sh && cp .tool-versions ${localWorkspaceFolder}/infrastructure/images/build-container/resources/.tool-versions",
   "mounts": [
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind,consistency=cached"
   ],
@@ -50,5 +50,8 @@
     "default": {
       "onAutoForward": "ignore"
     }
-  }
+  },
+  "runArgs": [
+    "--network=gateway-local"
+  ]
 }
