Exclude stubs from coverage testing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=.github,gateway-api,infrastructure,scripts,Makefile
 sonar.tests=tests,gateway-api/tests
 sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,gateway-api/tests/**,**/__pycache__/**,**/.venv/**,**/*.drawio
-sonar.coverage.exclusions=**/tests/**,**/features/**,**/test_*.py
+sonar.coverage.exclusions=**/tests/**,**/features/**,**/test_*.py,**/stubs/**
 # Set Python version for more precise analysis
 sonar.python.version=3.14
