[GPCAPIM-166]: Update sonar.sources configuration
- Changed sonar.sources to include all source files in the project

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@
 sonar.host.url=https://sonarcloud.io
 sonar.qualitygate.wait=true
 sonar.sourceEncoding=UTF-8
-sonar.sources=gateway-api/src,gateway-api/lambda_handler.py,infrastructure,scripts,Makefile
+sonar.sources=.
 sonar.tests=gateway-api/tests
 sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,infrastructure/images/**,**/__pycache__/**,**/.venv/**,**/*.drawio
 sonar.coverage.exclusions=**/tests/**,**/features/**,**/test_*.py
