[GPCAPIM-166]: refine sonar configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,15 +5,10 @@
 sonar.host.url=https://sonarcloud.io
 sonar.qualitygate.wait=true
 sonar.sourceEncoding=UTF-8
-sonar.sources=.
-sonar.tests=gateway-api/tests
-sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,infrastructure/images/**,**/__pycache__/**,**/.venv/**,**/*.drawio
+sonar.sources=.github,gateway-api,infrastructure,scripts,Makefile
+sonar.tests=tests,gateway-api/tests
+sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,**/__pycache__/**,**/.venv/**,**/*.drawio
 sonar.coverage.exclusions=**/tests/**,**/features/**,**/test_*.py
 # Set Python version for more precise analysis
 sonar.python.version=3.14
 sonar.python.coverage.reportPaths=gateway-api/test-artefacts/coverage-merged.xml
-sonar.junit.reportPaths=gateway-api/test-artefacts/unit-tests.xml,\
-gateway-api/test-artefacts/contract-tests.xml,\
-gateway-api/test-artefacts/schema-tests.xml,\
-gateway-api/test-artefacts/integration-tests.xml,\
-gateway-api/test-artefacts/acceptance-tests.xml
