[GPCAPIM-166]: Update SonarCloud configuration for source and exclusions
- Refine sonar.sources to include specific files in gateway-api
- Adjust sonar.exclusions to ensure proper coverage analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.qualitygate.wait=true
 sonar.sourceEncoding=UTF-8
 sonar.sources=.github,gateway-api,infrastructure,scripts,Makefile
 sonar.tests=tests,gateway-api/tests
-sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,**/__pycache__/**,**/.venv/**,**/*.drawio
+sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,gateway-api/tests/**,**/__pycache__/**,**/.venv/**,**/*.drawio
 sonar.coverage.exclusions=**/tests/**,**/features/**,**/test_*.py
 # Set Python version for more precise analysis
 sonar.python.version=3.14
