[GPCAPIM-166]: Update AWS credentials configuration in preview workflow
- Reverted to a specific version of the AWS credentials action

--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -36,8 +36,7 @@ jobs:
 
       # Configure AWS credentials (OIDC recommended)
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        # uses: aws-actions/configure-aws-credentials@56d6a583f00f6bad6d19d91d53a7bc3b8143d0e9
+        uses: aws-actions/configure-aws-credentials@56d6a583f00f6bad6d19d91d53a7bc3b8143d0e9
         with:
           role-to-assume:  ${{ env.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
